--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/millerEnv
 /quickregEnv
 /hand_traindata
 /test
@@ -5,3 +6,6 @@ app.spec
 build/
 dist/
 app/registros
+
+gui/__pycache__/
+scripts/__pycache__/
